--- a/src/content/once-ui/components/dropdown.mdx
+++ b/src/content/once-ui/components/dropdown.mdx
@@ -23,30 +23,36 @@ A simple dropdown container with options.
       code:
 `const [selected, setSelected] = useState("");
 
+const handleSelect = (value: string) => {
+    setSelected(value);
+};
+
 return (
-  <Dropdown
-    selectedOption={selected}
-    onSelect={(value) => setSelected(value)}
-    radius="m"
-    border="neutral-medium"
-    background="surface"
-  >
-    <Option
-      label="Option 1"
-      value="option1"
-      selected={selected === "option1"}
-    />
-    <Option
-      label="Option 2"
-      value="option2"
-      selected={selected === "option2"}
-    />
-    <Option
-      label="Option 3"
-      value="option3"
-      selected={selected === "option3"}
-    />
-  </Dropdown>
+    <Dropdown
+      selectedOption={selected}
+      onSelect={handleSelect}
+      padding="4"
+      radius="m-4"
+    >
+      <Option
+        label="Option 1"
+        value="option1"
+        selected={selected === "option1"}
+        onClick={handleSelect}
+      />
+      <Option
+        label="Option 2"
+        value="option2"
+        selected={selected === "option2"}
+        onClick={handleSelect}
+      />
+      <Option
+        label="Option 3"
+        value="option3"
+        selected={selected === "option3"}
+        onClick={handleSelect}
+      />
+    </Dropdown>
 );`,
       language: "tsx",
       label: "Basic Usage"
@@ -69,34 +75,41 @@ Enhance dropdown options with icons for better visual communication.
       code:
 `const [selected, setSelected] = useState("");
 
+const handleSelect = (value: string) => {
+    setSelected(value);
+};
+
 return (
-  <Dropdown
-    selectedOption={selected}
-    onSelect={(value) => setSelected(value)}
-    radius="m"
-    border="neutral-medium"
-    background="surface"
-  >
-    <Option
-      label="Edit"
-      value="edit"
-      hasPrefix={<Icon name="edit" size="s" />}
-      selected={selected === "edit"}
-    />
-    <Option
-      label="Duplicate"
-      value="duplicate"
-      hasPrefix={<Icon name="copy" size="s" />}
-      selected={selected === "duplicate"}
-    />
-    <Option
-      label="Delete"
-      value="delete"
-      hasPrefix={<Icon name="trash" size="s" />}
-      danger
-      selected={selected === "delete"}
-    />
-  </Dropdown>
+    <Dropdown
+      selectedOption={selected}
+      onSelect={handleSelect}
+      padding="8"
+      radius="m-8"
+    >
+      <Option
+        label="Edit"
+        value="edit"
+        hasPrefix={<Icon name="edit" size="xs" />}
+        selected={selected === "edit"}
+        onClick={handleSelect}
+      />
+      <Option
+        label="Duplicate"
+        value="duplicate"
+        hasPrefix={<Icon name="copy" size="xs" />}
+        selected={selected === "duplicate"}
+        onClick={handleSelect}
+      />
+      <Line marginY="8" />
+      <Option
+        label="Delete"
+        value="delete"
+        hasPrefix={<Icon name="delete" size="xs" />}
+        danger
+        selected={selected === "delete"}
+        onClick={handleSelect}
+      />
+    </Dropdown>
 );`,
       language: "tsx",
       label: "With Icons"
@@ -119,36 +132,42 @@ Add descriptive text to dropdown options for additional context.
       code:
 `const [selected, setSelected] = useState("");
 
+const handleSelect = (value: string) => {
+    setSelected(value);
+};
+
 return (
-  <Dropdown
-    selectedOption={selected}
-    onSelect={(value) => setSelected(value)}
-    radius="m"
-    border="neutral-medium"
-    background="surface"
-  >
-    <Option
-      label="Apple"
-      value="apple"
-      description="A fruit that grows on trees"
-      selected={selected === "apple"}
-    />
-    <Option
-      label="Banana"
-      value="banana"
-      description="A curved yellow fruit"
-      selected={selected === "banana"}
-    />
-    <Option
-      label="Carrot"
-      value="carrot"
-      description="An orange root vegetable"
-      selected={selected === "carrot"}
-    />
-  </Dropdown>
+    <Dropdown
+      selectedOption={selected}
+      onSelect={handleSelect}
+      padding="8"
+      radius="m-8"
+    >
+      <Option
+        label="Apple"
+        value="apple"
+        description="A fruit that grows on trees"
+        selected={selected === "apple"}
+        onClick={handleSelect}
+      />
+      <Option
+        label="Banana"
+        value="banana"
+        description="A curved yellow fruit"
+        selected={selected === "banana"}
+        onClick={handleSelect}
+      />
+      <Option
+        label="Carrot"
+        value="carrot"
+        description="An orange root vegetable"
+        selected={selected === "carrot"}
+        onClick={handleSelect}
+      />
+    </Dropdown>
 );`,
       language: "tsx",
-      label: "With Descriptions"
+      label: "Description"
     }
   ]}
 />
@@ -168,36 +187,42 @@ Customize the appearance of the dropdown with Flex props.
       code:
 `const [selected, setSelected] = useState("");
 
+const handleSelect = (value: string) => {
+    setSelected(value);
+};
+
 return (
-  <Dropdown
-    selectedOption={selected}
-    onSelect={(value) => setSelected(value)}
-    radius="xl"
-    border="brand-medium"
-    background="brand-weak"
-    shadow="m"
-    padding="8"
-    gap="8"
-  >
-    <Option
-      label="Small"
-      value="small"
-      selected={selected === "small"}
-    />
-    <Option
-      label="Medium"
-      value="medium"
-      selected={selected === "medium"}
-    />
-    <Option
-      label="Large"
-      value="large"
-      selected={selected === "large"}
-    />
-  </Dropdown>
+    <Dropdown
+      selectedOption={selected}
+      onSelect={handleSelect}
+      radius="m-8"
+      border="brand-alpha-medium"
+      background="brand-alpha-weak"
+      shadow="xl"
+      padding="8"
+    >
+      <Option
+        label="Small"
+        value="small"
+        selected={selected === "small"}
+        onClick={handleSelect}
+      />
+      <Option
+        label="Medium"
+        value="medium"
+        selected={selected === "medium"}
+        onClick={handleSelect}
+      />
+      <Option
+        label="Large"
+        value="large"
+        selected={selected === "large"}
+        onClick={handleSelect}
+      />
+    </Dropdown>
 );`,
       language: "tsx",
-      label: "Custom Styling"
+      label: "Custom styling"
     }
   ]}
 />
