--- a/src/content/once-ui/components/flex.mdx
+++ b/src/content/once-ui/components/flex.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Flex"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
-updatedAt: "2025-05-04"
+summary: "A layout component that arranges its children in a flex container."
+updatedAt: "2025-05-09"
 navLabel: "Flex"
-navIcon: "learn"
+navIcon: "components"
 ---
 
-## Coming soon
+Learn more about the `Flex` component usage in the [Structure](/once-ui/basics/structure) section.
