--- a/src/content/once-ui/components/kbd.mdx
+++ b/src/content/once-ui/components/kbd.mdx
@@ -1,9 +1,139 @@
 ---
-title: "InteractiveDetails"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
-updatedAt: "2025-05-04"
-navLabel: "InteractiveDetails"
-navIcon: "learn"
+title: "Kbd"
+summary: "A component for displaying keyboard keys and shortcuts with consistent styling."
+updatedAt: "2025-05-09"
+navLabel: "Kbd"
+navIcon: "components"
 ---
 
-## Coming soon
+The Kbd component is used to display keyboard keys and shortcuts with consistent styling. It's useful for showing keyboard interactions in documentation, tutorials, or application interfaces.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Row gap="16" wrap>
+      <Kbd>Tab</Kbd>
+      <Kbd>Enter</Kbd>
+      <Kbd>Shift</Kbd>
+      <Kbd>Esc</Kbd>
+    </Row>
+  }
+  codeInstances={[
+    {
+      code:
+`<Kbd>Tab</Kbd>
+<Kbd>Enter</Kbd>
+<Kbd>Shift</Kbd>
+<Kbd>Esc</Kbd>`,
+      language: "tsx",
+      label: "Kbd"
+    }
+  ]}
+/>
+
+## Shortcuts
+
+Use multiple Kbd components together to display keyboard shortcuts.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column gap="16" fillWidth>
+      <Flex gap="8" vertical="center">
+        <Kbd>Ctrl</Kbd>
+        <Text>+</Text>
+        <Kbd>C</Kbd>
+        <Text>to copy</Text>
+      </Flex>
+      <Flex gap="8" vertical="center">
+        <Kbd>Ctrl</Kbd>
+        <Text>+</Text>
+        <Kbd>V</Kbd>
+        <Text>to paste</Text>
+      </Flex>
+      <Flex gap="8" vertical="center">
+        <Kbd>Alt</Kbd>
+        <Text>+</Text>
+        <Kbd>Tab</Kbd>
+        <Text>to switch windows</Text>
+      </Flex>
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Flex gap="8" vertical="center">
+    <Kbd>Ctrl</Kbd>
+    <Text>+</Text>
+    <Kbd>C</Kbd>
+    <Text>to copy</Text>
+</Flex>`,
+      language: "tsx",
+      label: "Shortcuts"
+    }
+  ]}
+/>
+
+## Label
+
+You can use either the `children` prop or the `label` prop to set the content of the Kbd component.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Row gap="16">
+      <Kbd label="Space"/>
+      <Kbd>Enter</Kbd>
+    </Row>
+  }
+  codeInstances={[
+    {
+      code:
+`<Kbd label="Space"/>
+<Kbd>Enter</Kbd>`,
+      language: "tsx",
+      label: "Label"
+    }
+  ]}
+/>
+
+## Customization
+
+The Kbd component inherits all Flex props, allowing for customization of its appearance.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Row gap="16" vertical="center">
+      <Kbd background="brand-medium" border="brand-medium" onBackground="brand-weak">Cmd</Kbd>
+      <Kbd background="accent-medium" border="accent-medium" onBackground="accent-weak">Alt</Kbd>
+      <Kbd paddingX="8" paddingY="4">Space</Kbd>
+    </Row>
+  }
+  codeInstances={[
+    {
+      code:
+`<Kbd background="brand-medium" border="brand-medium" onBackground="brand-weak">Cmd</Kbd>
+<Kbd background="accent-medium" border="accent-medium" onBackground="accent-weak">Alt</Kbd>
+<Kbd paddingX="8" paddingY="4">Space</Kbd>`,
+      language: "tsx",
+      label: "Custom styling"
+    }
+  ]}
+/>
+
+## API reference
+
+<PropsTable
+  content={[
+    ["label", "string"],
+    ["children"],
+    ["className"],
+    ["style"],
+    ["...flex"]
+  ]}
+/>
