--- a/src/content/once-ui/components/line.mdx
+++ b/src/content/once-ui/components/line.mdx
@@ -1,9 +1,124 @@
 ---
 title: "Line"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
-updatedAt: "2025-05-04"
+summary: "A simple component for creating horizontal or vertical divider lines with consistent styling."
+updatedAt: "2025-05-09"
 navLabel: "Line"
-navIcon: "learn"
+navIcon: "components"
 ---
 
-## Coming soon
+The Line component is used to create horizontal or vertical divider lines with consistent styling. It's useful for visually separating content sections in your application.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column gap="24" fillWidth horizontal="center">
+      <Line />
+      <Text variant="code-default-m">Content between lines</Text>
+      <Line />
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Line />
+<Text>Content between lines</Text>
+<Line />`,
+      language: "tsx",
+      label: "Line"
+    }
+  ]}
+/>
+
+## Vertical line
+
+Use the `vert` prop to create a vertical line instead of a horizontal one.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Row gap="32" height="80" center>
+      <Text>Left side</Text>
+      <Line vert height="80" />
+      <Text>Right side</Text>
+    </Row>
+  }
+  codeInstances={[
+    {
+      code:
+`<Row gap="32" height="80" center>
+    <Text>Left side</Text>
+    <Line vert height="80" />
+    <Text>Right side</Text>
+</Row>`,
+      language: "tsx",
+      label: "Vertical"
+    }
+  ]}
+/>
+
+## Custom styling
+
+The Line component inherits all Flex props, allowing for customization of its appearance.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column gap="32" paddingY="24" fillWidth>
+      <Line background="brand-strong" />
+      <Line background="accent-strong" />
+      <Line background="danger-strong" />
+      <Line background="warning-strong" />
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Line background="brand-strong" />
+<Line background="accent-strong" />
+<Line background="danger-strong" />
+<Line background="warning-strong" />`,
+      language: "tsx",
+      label: "Custom styling"
+    }
+  ]}
+/>
+
+## Spacing
+
+Add margin to create space around the line.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column gap="8" fillWidth>
+      <Text>Content above line</Text>
+      <Line marginY="16" />
+      <Text>Content below line</Text>
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Text>Content above line</Text>
+<Line marginY="16" />
+<Text>Content below line</Text>`,
+      language: "tsx",
+      label: "Spacing"
+    }
+  ]}
+/>
+
+## API reference
+
+<PropsTable
+  content={[
+    ["vert", "boolean", "false"],
+    ["style"],
+    ["className"],
+    ["...flex"]
+  ]}
+/>
