--- a/src/content/once-ui/form-controls/interactiveDetails.mdx
+++ b/src/content/once-ui/form-controls/interactiveDetails.mdx
@@ -1,9 +1,158 @@
 ---
-title: "Kbd"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
-updatedAt: "2025-05-04"
-navLabel: "Kbd"
-navIcon: "learn"
+title: "InteractiveDetails"
+summary: "A utility component for displaying labels and descriptions for interactive form elements."
+updatedAt: "2025-05-09"
+navLabel: "InteractiveDetails"
+navIcon: "form-controls"
 ---
 
-## Coming soon
+The InteractiveDetails component is a utility component used to display labels and descriptions for interactive form elements such as checkboxes and radio buttons. It provides consistent styling and behavior for these elements.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column gap="16">
+      <InteractiveDetails 
+        label="Basic label" 
+        onClick={() => {}}
+      />
+      <InteractiveDetails 
+        label="With description" 
+        description="This is a description for the interactive element"
+        onClick={() => {}}
+      />
+      <InteractiveDetails 
+        label="With help tooltip" 
+        iconButtonProps={{ tooltip: "This is a help tooltip" }}
+        onClick={() => {}}
+      />
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<InteractiveDetails 
+    label="Basic label" 
+    onClick={() => {}}
+/>
+
+<InteractiveDetails 
+    label="With description" 
+    description="This is a description for the interactive element"
+    onClick={() => {}}
+/>
+
+<InteractiveDetails 
+    label="With help tooltip" 
+    iconButtonProps={{ tooltip: "This is a help tooltip" }}
+    onClick={() => {}}
+/>`,
+      language: "tsx",
+      label: "InteractiveDetails"
+    }
+  ]}
+/>
+
+## Usage with form controls
+
+InteractiveDetails is primarily used as a building block for form controls like Checkbox and RadioButton to provide consistent labeling and description functionality.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column gap="16">
+      <Checkbox 
+        label="Checkbox with InteractiveDetails"
+        description="This checkbox uses InteractiveDetails for its label and description"
+      />
+      <RadioButton 
+        label="Radio button with InteractiveDetails"
+        description="This radio button uses InteractiveDetails for its label and description"
+      />
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Checkbox 
+    label="Checkbox with InteractiveDetails"
+    description="This checkbox uses InteractiveDetails for its label and description"
+/>
+
+<RadioButton 
+    label="Radio button with InteractiveDetails"
+    description="This radio button uses InteractiveDetails for its label and description"
+/>`,
+      language: "tsx",
+      label: "Form controls"
+    }
+  ]}
+/>
+
+## With help tooltip
+
+Add a help tooltip to provide additional information about the form control.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column gap="16">
+      <InteractiveDetails 
+        label="With tooltip on top"
+        iconButtonProps={{ 
+          tooltip: "This tooltip appears on top", 
+          tooltipPosition: "top" 
+        }}
+        onClick={() => {}}
+      />
+      <InteractiveDetails 
+        label="With tooltip on right"
+        iconButtonProps={{ 
+          tooltip: "This tooltip appears on the right", 
+          tooltipPosition: "right" 
+        }}
+        onClick={() => {}}
+      />
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<InteractiveDetails 
+    label="With tooltip on top"
+    iconButtonProps={{ 
+        tooltip: "This tooltip appears on top", 
+        tooltipPosition: "top" 
+    }}
+    onClick={() => {}}
+/>
+
+<InteractiveDetails 
+    label="With tooltip on right"
+    iconButtonProps={{ 
+        tooltip: "This tooltip appears on the right", 
+        tooltipPosition: "right" 
+    }}
+    onClick={() => {}}
+/>`,
+      language: "tsx",
+      label: "Tooltip"
+    }
+  ]}
+/>
+
+## API reference
+
+<PropsTable
+  content={[
+    ["label", "React.ReactNode"],
+    ["description", "React.ReactNode"],
+    ["iconButtonProps", "IconButtonProps"],
+    ["onClick", "() => void"],
+    ["className", "string"],
+    ["id", "string"]
+  ]}
+/>
