--- a/src/content/once-ui/components/option.mdx
+++ b/src/content/once-ui/components/option.mdx
@@ -1,9 +1,199 @@
 ---
 title: "Option"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
-updatedAt: "2025-05-04"
+summary: "A selectable item component for use in menus, dropdowns, and select controls."
+updatedAt: "2025-05-09"
 navLabel: "Option"
-navIcon: "learn"
+navIcon: "components"
 ---
 
-## Coming soon
+The `Option` component represents a selectable item typically used within dropdown menus, select controls, and other interactive lists.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <ClientOption 
+      label="Default option"
+      value="default"
+    />
+  }
+  codeInstances={[
+    {
+      code:
+`<Option 
+    label="Default option"
+    value="default"
+/>`,
+      language: "tsx",
+      label: "Option"
+    }
+  ]}
+/>
+
+## Description
+
+Add a description to provide additional context for the option.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <ClientOption 
+      label="With description"
+      description="This option has additional information"
+      value="with-description"
+    />
+  }
+  codeInstances={[
+    {
+      code:
+`<Option 
+    label="With description"
+    description="This option has additional information"
+    value="with-description"
+/>`,
+      language: "tsx",
+      label: "With description"
+    }
+  ]}
+/>
+
+## Prefix / Suffix
+
+Add icons or other elements before or after the option text.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column gap="8">
+      <ClientOption 
+        label="With prefix"
+        value="with-prefix"
+        hasPrefix={<Icon icon="check" />}
+      />
+      <ClientOption
+        label="With suffix"
+        value="with-suffix"
+        hasSuffix={<Kbd><Text wrap="nowrap">⌘ + K</Text></Kbd>}
+      />
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Option 
+    label="With prefix"
+    value="with-prefix"
+    hasPrefix={<Icon icon="check" />}
+/>
+
+<Option 
+    label="With suffix"
+    value="with-suffix"
+    hasSuffix={<Kbd label="⌘ + K" />}
+/>`,
+      language: "tsx",
+      label: "Prefix / Suffix"
+    }
+  ]}
+/>
+
+## States
+
+Options can be selected, highlighted, or marked as dangerous.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column gap="8">
+      <ClientOption 
+        label="Selected option"
+        value="selected"
+        selected
+      />
+      <ClientOption 
+        label="Highlighted option"
+        value="highlighted"
+        highlighted
+      />
+      <ClientOption 
+        label="Danger option"
+        value="danger"
+        danger
+      />
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Option 
+    label="Selected option"
+    value="selected"
+    selected
+/>
+
+<Option 
+    label="Highlighted option"
+    value="highlighted"
+    highlighted
+/>
+
+<Option 
+    label="Danger option"
+    value="danger"
+    danger
+/>`,
+      language: "tsx",
+      label: "States"
+    }
+  ]}
+/>
+
+## As link
+
+Options can function as links by providing the `href` prop.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <ClientOption 
+      label="Link option"
+      value="link"
+      href="#"
+    />
+  }
+  codeInstances={[
+    {
+      code:
+`<Option 
+    label="Link option"
+    value="link"
+    href="#"
+/>`,
+      language: "tsx",
+      label: "As link"
+    }
+  ]}
+/>
+
+## API reference
+
+<PropsTable
+  content={[
+    ["label", "React.ReactNode"],
+    ["value", "string"],
+    ["description", "React.ReactNode"],
+    ["hasPrefix", "React.ReactNode"],
+    ["hasSuffix", "React.ReactNode"],
+    ["href", "string"],
+    ["selected", "boolean"],
+    ["highlighted", "boolean", "false"],
+    ["danger", "boolean", "false"],
+    ["onClick", "(value: string) => void"],
+    ["onLinkClick", "() => void"],
+    ["tabIndex", "number"]
+  ]}
+/>
