--- a/src/content/once-ui/components/segmentedControl.mdx
+++ b/src/content/once-ui/components/segmentedControl.mdx
@@ -1,9 +1,166 @@
 ---
 title: "SegmentedControl"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
-updatedAt: "2025-05-04"
-navLabel: "SegmentedControl"
-navIcon: "learn"
+summary: "The SegmentedControl component allows users to select a single option from a set of horizontally arranged buttons. It supports keyboard navigation and customizable options."
+updatedAt: "2025-05-09"
+navLabel: "Segmented Control"
+navIcon: "components"
 ---
 
-## Coming soon
+Use this component for toggle-style selection between discrete options. It supports keyboard interaction, styling, and controlled or uncontrolled usage.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <SegmentedControl
+      fillWidth={false}
+      buttons={[
+        { value: "day", label: "Day" },
+        { value: "week", label: "Week" },
+        { value: "month", label: "Month" },
+      ]}
+    />
+  }
+  codeInstances={[
+    {
+      code:
+`<SegmentedControl
+    fillWidth={false}
+    buttons={[
+      { value: "day", label: "Day" },
+      { value: "week", label: "Week" },
+      { value: "month", label: "Month" },
+    ]}
+    onToggle={(value) => console.log(value)}
+/>`,
+      language: "tsx",
+      label: "Basic usage"
+    }
+  ]}
+/>
+
+## Default selected
+
+Use `defaultSelected` to define an initial active button in uncontrolled mode.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Row fillWidth horizontal="center">
+      <SegmentedControl
+        fillWidth={false}
+        defaultSelected="week"
+        buttons={[
+          { value: "day", label: "Day" },
+          { value: "week", label: "Week" },
+          { value: "month", label: "Month" },
+        ]}
+      />
+      </Row>
+  }
+  codeInstances={[
+    {
+      code:
+`<SegmentedControl
+    fillWidth={false}
+    defaultSelected="week"
+    buttons={[
+      { value: "day", label: "Day" },
+      { value: "week", label: "Week" },
+      { value: "month", label: "Month" },
+    ]}
+    onToggle={(value) => console.log(value)}
+/>`,
+      language: "tsx",
+      label: "Default selected"
+    }
+  ]}
+/>
+
+## Controlled state
+
+Control the selected value externally with the `selected` prop.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Row fillWidth horizontal="center">
+      <SegmentedControl
+        fillWidth={false}
+        selected="month"
+        buttons={[
+          { value: "day", label: "Day" },
+          { value: "week", label: "Week" },
+          { value: "month", label: "Month" },
+        ]}
+      />
+    </Row>
+  }
+  codeInstances={[
+    {
+      code:
+`<SegmentedControl
+  fillWidth={false}
+  selected="month"
+  buttons={[
+    { value: "day", label: "Day" },
+    { value: "week", label: "Week" },
+    { value: "month", label: "Month" },
+  ]}
+  onToggle={(value) => console.log(value)}
+/>`,
+      language: "tsx",
+      label: "Controlled"
+    }
+  ]}
+/>
+
+## Fill width
+
+Distribute the button widths evenly across the container.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <SegmentedControl
+      buttons={[
+        { value: "a", label: "A" },
+        { value: "b", label: "B" },
+        { value: "c", label: "C" },
+      ]}
+    />
+  }
+  codeInstances={[
+    {
+      code:
+`<SegmentedControl
+  buttons={[
+    { value: "a", label: "A" },
+    { value: "b", label: "B" },
+    { value: "c", label: "C" },
+  ]}
+  onToggle={(value) => console.log(value)}
+/>`,
+      language: "tsx",
+      label: "Fill width"
+    }
+  ]}
+/>
+
+## API reference
+
+<PropsTable
+  content={[
+    ["buttons", "ButtonOption[]"],
+    ["onToggle", "(value: string, event?) => void"],
+    ["defaultSelected", "string"],
+    ["selected", "string"],
+    ["fillWidth", "boolean", "true"],
+    ["className"],
+    ["style"],
+    ["...ScrollerProps", "ScrollerProps"]
+  ]}
+/>
