replace SmartImage with Media

--- a/src/content/magic-docs/components.mdx
+++ b/src/content/magic-docs/components.mdx
@@ -271,7 +271,7 @@ Cards are used to group related content and actions.
         padding="4"
         gap="8"
       >
-        <SmartImage src="/images/docs/magic-docs.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
+        <Media src="/images/docs/magic-docs.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
         <Column fillWidth padding="12" gap="8" horizontal="start">
           <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">
             Card Title
@@ -293,7 +293,7 @@ Cards are used to group related content and actions.
     direction="column"
     padding="4"
   >
-    <SmartImage src="/images/docs/magic-docs.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
+    <Media src="/images/docs/magic-docs.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
     <Column fillWidth padding="12" gap="8" horizontal="start">
       <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">
         Card Title
@@ -497,18 +497,18 @@ Use the grid to construct responsive grid layouts. It can be styled similarly to
 
 ## Media
 
-SmartImage provides an optimized way to display images. Access it with the `SmartImage` component for full customization or use the markdown syntax.
+Media provides an optimized way to display images. Access it with the `Media` component for full customization or use the markdown syntax.
 
 <Column fillWidth gap="-1" marginBottom="16" marginTop="8">
 <CodeBlock
     radius="none"
     topRadius="l"
     codeHeight={24}
-    codePreview={<SmartImage src="/images/docs/magic-bio.jpg" alt="Example image" sizes="640px" aspectRatio="16/9" radius="l" />}
+    codePreview={<Media src="/images/docs/magic-bio.jpg" alt="Example image" sizes="640px" aspectRatio="16/9" radius="l" />}
     codeInstances={[
       {
         code:
-`<SmartImage
+`<Media
     src="/images/docs/magic-bio.jpg"
     sizes="640px"
     alt="Example image"
@@ -516,12 +516,12 @@ SmartImage provides an optimized way to display images. Access it with the `Smar
     radius="l"
 />`,
         language: "tsx",
-        label: "SmartImage"
+        label: "Media"
       }
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/smartImage" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/Media" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -532,23 +532,23 @@ You can also use it to embed YouTube videos.
     radius="none"
     topRadius="l"
     codeHeight={24}
-    codePreview={<SmartImage src="https://www.youtube.com/watch?v=M5lFtW1BvPc" alt="Example video" aspectRatio="16/9" radius="l" />}
+    codePreview={<Media src="https://www.youtube.com/watch?v=M5lFtW1BvPc" alt="Example video" aspectRatio="16/9" radius="l" />}
     codeInstances={[
       {
         code:
-`<SmartImage
+`<Media
     src="https://www.youtube.com/watch?v=M5lFtW1BvPc"
     alt="Example video"
     aspectRatio="16/9"
     radius="l"
 />`,
         language: "tsx",
-        label: "SmartImage"
+        label: "Media"
       }
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/smartImage" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/Media" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -613,7 +613,7 @@ Since Magic Docs is based on Once UI, you can use all the components provided by
     p: createParagraph as any,
     h1: createHeading("h1") as any,
     ...
-    SmartImage: dynamic(() => import("@/once-ui/components").then(mod => mod.SmartImage)),
+    Media: dynamic(() => import("@/once-ui/components").then(mod => mod.Media)),
     SmartLink: dynamic(() => import("@/once-ui/components").then(mod => mod.SmartLink)),
 };`,
         language: "tsx",
