--- a/src/content/once-ui/basics/structure.mdx
+++ b/src/content/once-ui/basics/structure.mdx
@@ -1159,11 +1159,11 @@ Use the `dark` and `light` props to limit rendering by theme.
   marginBottom="24"
   codePreview={
     <Column fillWidth gap="24" horizontal="center">
-      <SmartImage src="/images/docs/once-ui/vibe-coding-dark.jpg" alt="Dark theme" dark
+      <Media src="/images/docs/once-ui/vibe-coding-dark.jpg" alt="Dark theme" dark
         sizes="(max-width: 1024px) 90vw, 640px"
         aspectRatio="16/9"
         border="neutral-alpha-medium" radius="l"/>
-      <SmartImage src="/images/docs/once-ui/vibe-coding-light.jpg" alt="Light theme" light
+      <Media src="/images/docs/once-ui/vibe-coding-light.jpg" alt="Light theme" light
         sizes="(max-width: 1024px) 90vw, 640px"
         aspectRatio="16/9"
         border="neutral-alpha-medium" radius="l"/>
@@ -1173,8 +1173,8 @@ Use the `dark` and `light` props to limit rendering by theme.
   codeInstances={[
     {
       code:
-`<SmartImage dark src="/image-dark.jpg"/>
-<SmartImage light src="/image-light.jpg"/>`,
+`<Media dark src="/image-dark.jpg"/>
+<Media light src="/image-light.jpg"/>`,
       language: "tsx",
       label: "Hide / Show"
     }
