--- a/src/content/once-ui/components/card.mdx
+++ b/src/content/once-ui/components/card.mdx
@@ -20,7 +20,7 @@ The `Card` component is a versatile, fluid container for content with a hover ef
             <Avatar size="xs" src="/images/avatar.jpg"/>
             <Text variant="label-default-s">Lorant One</Text>
           </Row>
-          <SmartImage
+          <Media
             border="neutral-alpha-weak"
             sizes="400px"
             fillWidth
@@ -70,7 +70,7 @@ The `Card` component is a versatile, fluid container for content with a hover ef
         <Avatar size="xs" src="/images/avatar.jpg"/>
         <Text variant="label-default-s">Lorant One</Text>
       </Row>
-      <SmartImage
+      <Media
         border="neutral-alpha-weak"
         sizes="400px"
         fillWidth
