--- a/src/content/once-ui/components/cursorCard.mdx
+++ b/src/content/once-ui/components/cursorCard.mdx
@@ -26,7 +26,7 @@ A component that displays floating content that follows the user's cursor when h
               <Avatar size="xs" src="/images/avatar.jpg"/>
               <Text variant="label-default-s">Lorant One</Text>
             </Row>
-            <SmartImage
+            <Media
               border="neutral-alpha-weak"
               sizes="400px"
               fillWidth
