--- a/src/content/once-ui/components/fade.mdx
+++ b/src/content/once-ui/components/fade.mdx
@@ -13,7 +13,7 @@ The Fade component creates a gradient fade effect that transitions from a base c
   marginBottom="24"
   codePreview={
     <Flex border="neutral-alpha-weak" fillWidth aspectRatio={4 / 3} radius="l" overflow="hidden">
-      <SmartImage sizes="640px" src="/images/docs/once-ui/vibe-coding-dark.jpg" />
+      <Media sizes="640px" src="/images/docs/once-ui/vibe-coding-dark.jpg" />
       <Fade
         topRadius="l"
         fillWidth
@@ -38,7 +38,7 @@ The Fade component creates a gradient fade effect that transitions from a base c
     {
       code:
 `<Flex border="brand-alpha-medium" fillWidth aspectRatio={4 / 3} radius="l" overflow="hidden">
-    <SmartImage src="/image.jpg" />
+    <Media src="/image.jpg" />
     <Fade
       fillWidth
       position="absolute"
