--- a/src/content/once-ui/components/ogCard.mdx
+++ b/src/content/once-ui/components/ogCard.mdx
@@ -18,12 +18,12 @@ The `OgCard` component displays rich link previews for URLs by fetching and rend
   }
   codeInstances={[
     {
+      language: "tsx",
+      label: "OgCard",
       code:
 `<OgCard 
     url="https://once-ui.com"
 />`,
-      language: "tsx",
-      label: "OgCard"
     }
   ]}
 />
