--- a/src/content/once-ui/components/scrollToTop.mdx
+++ b/src/content/once-ui/components/scrollToTop.mdx
@@ -88,6 +88,6 @@ The button can be customized using `Flex` props and additional `className`.
     ["className"],
     ["style"],
     ["children"],
-    ["...FlexProps"]
+    ["...flex"]
   ]}
 />
