--- a/src/content/once-ui/components/segmentedControl.mdx
+++ b/src/content/once-ui/components/segmentedControl.mdx
@@ -161,6 +161,6 @@ Distribute the button widths evenly across the container.
     ["fillWidth", "boolean", "true"],
     ["className"],
     ["style"],
-    ["...ScrollerProps", "ScrollerProps"]
+    ["...scroller", "ScrollerProps"]
   ]}
 />
