--- a/src/content/once-ui/config.mdx
+++ b/src/content/once-ui/config.mdx
@@ -207,7 +207,7 @@ Just add the `data-theme`, `data-neutral`, `data-brand`, `data-accent`, `data-bo
                 </Text>
               </Column>
               <Flex minWidth={8} overflow="hidden" radius="m" border="neutral-medium" fitHeight>
-                <SmartImage
+                <Media
                   aspectRatio="3 / 2"
                   alt="Image preview for article"
                   sizes="120px"
