--- a/src/content/get-started.mdx
+++ b/src/content/get-started.mdx
@@ -27,7 +27,7 @@ Since our templates are not just static page examples, but functional, productio
     direction="column"
     gap="4"
   >
-    <SmartImage src="/images/docs/once-ui.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
+    <Media src="/images/docs/once-ui.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
     <Column fillWidth padding="20" gap="8" horizontal="start">
       <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">Once UI</Text>
       <Text variant="body-default-s" onBackground="neutral-weak" align="left">Get started with the original starter template.</Text>
@@ -41,7 +41,7 @@ Since our templates are not just static page examples, but functional, productio
     direction="column"
     gap="4"
   >
-    <SmartImage src="/images/docs/magic-portfolio.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
+    <Media src="/images/docs/magic-portfolio.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
     <Column fillWidth padding="20" gap="8" horizontal="start">
       <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">Magic Portfolio</Text>
       <Text variant="body-default-s" onBackground="neutral-weak" align="left">Create your beautiful creative portfolio.</Text>
@@ -55,7 +55,7 @@ Since our templates are not just static page examples, but functional, productio
     direction="column"
     gap="4"
   >
-    <SmartImage src="/images/docs/magic-store.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
+    <Media src="/images/docs/magic-store.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
     <Column fillWidth padding="20" gap="8" horizontal="start">
       <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">Magic Store</Text>
       <Text variant="body-default-s" onBackground="neutral-weak" align="left">Start selling merch with a ready-made store.</Text>
@@ -69,7 +69,7 @@ Since our templates are not just static page examples, but functional, productio
     direction="column"
     gap="4"
   >
-    <SmartImage src="/images/docs/magic-docs.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
+    <Media src="/images/docs/magic-docs.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
     <Column fillWidth padding="20" gap="8" horizontal="start">
       <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">Magic Docs</Text>
       <Text variant="body-default-s" onBackground="neutral-weak" align="left">Create product docs without writing code.</Text>
@@ -83,7 +83,7 @@ Since our templates are not just static page examples, but functional, productio
     direction="column"
     gap="4"
   >
-    <SmartImage src="/images/docs/magic-bio.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
+    <Media src="/images/docs/magic-bio.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
     <Column fillWidth padding="20" gap="8" horizontal="start">
       <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">Magic Bio</Text>
       <Text variant="body-default-s" onBackground="neutral-weak" align="left">Launch your link-in-bio site in minutes.</Text>
