--- a/src/content/once-ui/components/skeleton.mdx
+++ b/src/content/once-ui/components/skeleton.mdx
@@ -124,6 +124,6 @@ Apply delay classes to stagger loading effects for multiple items.
     ["delay", ["1", "2", "3", "4", "5", "6"]],
     ["className"],
     ["style"],
-    ["...FlexProps"]
+    ["...flex"]
   ]}
 />
