--- a/src/content/once-ui/effects/glitchFx.mdx
+++ b/src/content/once-ui/effects/glitchFx.mdx
@@ -1,9 +1,68 @@
 ---
 title: "GlitchFx"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "A component that applies a glitch effect to any content block. Ideal for eye-catching visuals and motion design."
 updatedAt: "2025-05-04"
 navLabel: "GlitchFx"
-navIcon: "learn"
+navIcon: "components"
 ---
 
-## Coming soon
+GlitchFx applies a glitch animation to any nested content. You can control the speed, triggering behavior, and repetition style for flexible presentation effects.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <GlitchFx fillWidth speed="medium">
+      <Column center fillWidth gap="8">
+        <Media
+          src="/images/docs/once-ui/earth.png"
+          alt="Earth"
+          aspectRatio="1 / 1"
+          maxWidth={24}
+          sizes="640px"
+        />
+        <Text align="center" variant="display-default-xs">
+          Welcome to Earth
+        </Text>
+        <Text align="center" variant="body-default-s" onBackground="neutral-weak">
+          Home to over 8 billion apes
+        </Text>
+      </Column>
+    </GlitchFx>
+  }
+  codeInstances={[
+    {
+      code:
+`<GlitchFx fillWidth speed="medium">
+    <Column center fillWidth gap="8">
+      <Media
+        src="/images/docs/once-ui/earth.png"
+        alt="Earth"
+        aspectRatio="1 / 1"
+        maxWidth={24}
+        sizes="640px"
+      />
+      <Heading as="h2" align="center" variant="display-default-xs">
+        Welcome to Earth
+      </Heading>
+      <Text align="center" variant="body-default-s" onBackground="neutral-weak">
+        Home to over 8 billion apes
+      </Text>
+    </Column>
+</GlitchFx>`,
+      language: "tsx",
+      label: "GlitchFx"
+    }
+  ]}
+/>
+
+## API reference
+
+<PropsTable
+  content={[
+    ["children"],
+    ["className"],
+    ["style"],
+    ["...flex"],
+  ]}
+/>
